fixed calss name .scrollbar-measure

--- a/src/styles/component/_scrollsize.scss
+++ b/src/styles/component/_scrollsize.scss
@@ -1,4 +1,4 @@
-.scollbar-measure {
+.scrollbar-measure {
     position: absolute;
     top: -9999px;
     width: 50px;
